# recommendinator

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: accessibility-review.md  code-review.md  commit-hygiene.md  document-review.md  parity-review.md  ruthless-code-reviewer.md  security-review.md  test-review.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_request.yml  theme_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
config/: example.yaml
docker/: Dockerfile.ollama  entrypoint.sh  ollama-entrypoint.sh
docs/: CHROMADB_SETUP.md  CLI.md  CONVERSATION_GUIDE.md  CUSTOM_RULES.md  DATA_SOURCES.md  DEVELOPMENT_PATTERNS.md  DOCKER.md  ENRICHMENT_SETUP.md  MODEL_RECOMMENDATIONS.md  OLLAMA_SETUP_GUIDE.md  PLUGIN_DEVELOPMENT.md  PYTHON_VERSION.md  SCHEMA_DESIGN.md  SCORING.md  SECURITY.md  THEME_DEVELOPMENT.md  TROUBLESHOOTING.md  V1_EXAMPLE_OUTPUT_FORMAT.md  V1_EXAMPLE_PROMPT_OPTIONS.md  V1_ROADMAP.md  V1_ROADMAP_LLM_INTEGRATION.md
inputs/: .gitkeep
resources/css/: base.css  base.css.test.ts  tailwind.css
resources/js/: App.vue  app.ts
scripts/: test_chromadb_setup.py
src/: __init__.py
src/cli/: __init__.py  __main__.py  commands.py  config.py  main.py
src/conversation/: __init__.py  context.py  engine.py  extractor.py  intent.py  memory.py  profile.py  tools.py
src/enrichment/: __init__.py  manager.py  provider_base.py  rate_limiter.py  registry.py
src/ingestion/: __init__.py  conflict.py  import_service.py  plugin_base.py  registry.py  sync.py
src/llm/: __init__.py  client.py  embeddings.py  preference_prompts.py  prompts.py  recommendations.py  tone.py
src/models/: config_field.py  content.py  conversation.py  user_preferences.py
src/recommendations/: __init__.py  constants.py  content_length.py  engine.py  genre_clusters.py  genre_normalizer.py  preference_interpreter.py  preferences.py  ranking.py  scorers.py  scoring_pipeline.py  similarity.py  variety.py
src/settings/: __init__.py  metadata.py  service.py
src/storage/: credential_migration.py  encryption.py  global_secrets.py  manager.py  merge.py  schema.py  settings_migration.py  source_migration.py  sqlite_db.py  vector_db.py
src/utils/: dates.py  series.py  (+8 more)
templates/: books.csv  books.json  books.md  movies.csv  movies.json  movies.md  tv_shows.csv  tv_shows.json  tv_shows.md  video_games.csv  video_games.json  video_games.md
tests/: conftest.py  factories.py  import_test_data.py  test_author_attribution.py  test_bug_regressions.py  test_cli.py  test_conflict.py  test_content_length.py  test_dates.py  test_embeddings.py  test_enum_handling_regression.py  test_epic_games.py  test_generic_csv.py  test_generic_json.py  test_gog.py  test_goodreads_parser.py  test_import_service.py  test_item_serialization.py  test_list_merge.py  test_markdown.py  test_ollama_client.py  test_package_version.py  test_plugin_base.py  test_preference_interpreter.py  test_preference_interpreter_llm.py  test_preferences.py  test_progress_utils.py  test_prompts.py  test_radarr.py  test_ranking.py  test_recommendation_engine.py  test_recommendation_prompts.py  test_recommendation_settings_fallback.py  test_recommendations.py  test_registry.py  test_request_errors.py  test_rom_title.py  test_roms.py  test_schema.py  test_scorers.py  (+16 more)
(+293 files in other folders)
