[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recommendinator"
version = "0.5.1"
description = "Privacy-focused recommendation engine for books, movies, TV shows, and video games"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "click>=8.1.0,<9.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "watchfiles>=0.21.0,<2.0.0",
    "legendary-gl>=0.20.0,<1.0.0",
    "cryptography>=41.0.0,<45.0.0",
]

[project.optional-dependencies]
ai = [
    "ollama>=0.1.0,<1.0.0",
    "chromadb>=1.0.0,<2.0.0",
]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "black>=23.11.0,<25.0.0",
    "mypy>=1.7.0,<2.0.0",
    "ruff>=0.1.6,<1.0.0",
    "types-pyyaml>=6.0.12",
    "types-click>=7.1.0",
    "types-requests>=2.31.0",
    "types-tabulate>=0.9.0",
    "python-semantic-release>=9.0.0,<11.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "legendary.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "UP042", # str(Enum) → StrEnum (preview rule, fires inconsistently across environments)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
log_file = "logs/tests.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
major_on_zero = false
tag_format = "v{version}"
build_command = "uv lock"
assets = ["uv.lock"]

[tool.semantic_release.changelog]
mode = "init"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
# No PyPI publish (upload_to_pypi defaults to false).
# semantic-release builds and uploads distributions to GitHub Releases.
upload_to_vcs_release = true
